--- a/Landing-Page/base.html
+++ b/Landing-Page/base.html
@@ -1,18 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Landing-Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/style.css">
+  <title>Landing-Page</title>
 </head>
-<body>
-    <nav>
 
+<body>
+  <header>
+    <div class="logo">
+      <img src="bubble_logo.png" alt="Bubble Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Terms of Service</a></li>
+      </ul>
     </nav>
-    <footer>
-        
-    </footer>
+    <div class="cta-button">
+      <button>Subscribe to our newsletter</button>
+    </div>
+  </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+  <section id="hero">
+    <div class="container">
+      <h1>Unleash Your Gaming Potential with Bubble!</h1>
+      <h2>Discover the Power of AI-Driven Gameplay like Never Before!</h2>
+      <button class="hero-cta">Try Now</button>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="container">
+      <h2>About Bubble</h2>
+      <p>Bubble is revolutionizing the gaming industry by leveraging the power of artificial intelligence. Our mission
+        is to provide gamers with an unparalleled gaming experience driven by cutting-edge technology. With Bubble,
+        you'll experience gaming like never before.</p>
+    </div>
+  </section>
+
+  <section id="features">
+    <div class="container">
+      <h2>Features</h2>
+      <ul>
+        <li>Advanced AI algorithms for immersive gameplay</li>
+        <li>Real-time player analysis and personalized recommendations</li>
+        <li>Seamless integration with popular gaming platforms</li>
+        <li>Enhanced graphics and responsive gameplay</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="testimonials">
+    <div class="container">
+      <h2>Testimonials</h2>
+      <div class="testimonial">
+        <img src="user1.jpg" alt="User 1">
+        <p>"Bubble has completely transformed the way I play games. The AI-driven gameplay recommendations have made my
+          gaming sessions more exciting and challenging!"</p>
+        <p class="name">John Doe</p>
+        <p class="title">Professional Gamer</p>
+      </div>
+      <div class="testimonial">
+        <img src="user2.jpg" alt="User 2">
+        <p>"As a game developer, I'm impressed with Bubble's incorporation of years of scientific research. It's
+          refreshing to see such innovation in the gaming industry!"</p>
+        <p class="name">Jane Smith</p>
+        <p class="title">Game Developer</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="shop">
+    <div class="container">
+      <h2>Shop</h2>
+      <div class="product">
+        <img src="product1.jpg" alt="Product 1">
+        <h3>Bubble T-Shirt</h3>
+        <p>$19.99</p>
+        <button class="buy-button">Buy Now</button>
+      </div>
+      <div class="product">
+        <img src="product2.jpg" alt="Product 2">
+        <h3>Bubble Hoodie</h3>
+        <p>$39.99</p>
+        <button class="buy-button">Buy Now</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="information">
+    <div class="container">
+      <h2>Information</h2>
+      <p>Discover the world of Bubble and experience AI-driven gaming like never before. Our app utilizes
+        state-of-the-art technology to provide you with a personalized gaming experience tailored to your preferences.
+        Check out our FAQs below to learn more.</p>
+      <h3>Frequently Asked Questions</h3>
+      <div class="faq">
+        <h4>Q: How does Bubble's AI-driven gameplay work?</h4>
+        <p>A: Bubble analyzes your gaming behavior, preferences, and skill level to generate personalized
+          recommendations and challenges in real-time.</p>
+      </div>
+      <div class="faq">
+        <h4>Q: Is Bubble compatible with all gaming platforms?</h4>
+        <p>A: Yes, Bubble seamlessly integrates with popular gaming platforms, including PC, Xbox, PlayStation, and
+          more.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="terms">
+    <div class="container">
+      <h2>Terms of Service</h2>
+      <p>Please read our Terms of Service carefully before using the Bubble app and website. By accessing or using our
+        services, you agree to be bound by these terms and conditions.</p>
+      <p>For our privacy policy and data protection details, please visit our Privacy Policy page.</p>
+    </div>
+  </section>
+
+
+
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <form>
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea placeholder="Your Message"></textarea>
+        <button class="submit-button">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Bubble. All rights reserved.</p>
+      <ul>
+        <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+      <div class="social-icons">
+        <a href="#"><img src="facebook_icon.png" alt="Facebook"></a>
+        <a href="#"><img src="twitter_icon.png" alt="Twitter"></a>
+        <a href="#"><img src="instagram_icon.png" alt="Instagram"></a>
+      </div>
+    </div>
+  </footer>
+  -->
+
+
 </body>
+
 </html>
