Added Three Section

--- a/Landing-Page/base.html
+++ b/Landing-Page/base.html
@@ -1,32 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
-  <title>Landing-Page</title>
+  <link rel="icon" href="assets/icons/cactus.png">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Snacks Mexico</title>
 </head>
 
 <body>
+
   <header>
-    <div class="logo">
-      <img src="bubble_logo.png" alt="Bubble Logo">
-    </div>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Terms of Service</a></li>
+
+      <div class="nav-start">
+        <h3>Snacks Mexico</h3>
+      </div>
+
+      <ul class="nav-middle">
+        <ol><a href="#">About</a></ol>
+        <ol><a href="#">Product</a></ol>
+        <ol><a href="#">Privacy</a></ol>
       </ul>
+
+      <div class="nav-end">
+        Contact Us
+      </div>
+
     </nav>
-    <div class="cta-button">
-      <button>Subscribe to our newsletter</button>
+
+    <div class="info-section">
+
+      <div class="info-section-details">
+        <h2 class="section-heading">Snacking like never before</h2>
+
+        <p class="section-middle">Experience Mexico in a new way with our secret recipe snacks delivered straight to
+          your doorstep. Perfect for home or office, our snacks give a uniquely modern and luxurious taste that will wow
+          you every time.</p>
+
+        <button class="cssbuttons-io-button"> Try Now
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="none" d="M0 0h24v24H0z"></path>
+              <path fill="currentColor"
+                d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"></path>
+            </svg>
+          </div>
+        </button>
+      </div>
+
+      <div class="shop">
+        <img src="assets/shop.jpg" alt="Snacks-Shop">
+      </div>
     </div>
+
   </header>
 
+    <article class="hero-section">
+
+      <div class="header-two">
+        <h3 class="hero-header">Elevate your snacking</h3>
+        <P class="hero-short-passage">Redefine your taste buds with our range of Mexican snacks created to invoke
+          whether a luxurious downtime or a festive get together.</P>
+      </div>
+      
+
+
+      <div class="hero-content">
+        <div class="content-div">
+          <img src="assets/icons/taste.png" alt="sugar" class="content-logo">
+          <p class="content-heading">Taste</p>
+          <p class="content-passage">Our snacks use the finest ingredients to bring unique and tantalizing flavors that will tantalize your taste buds for more.</p>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="content-div">
+          <img src="assets/icons/nutrition.png" alt="nutrition" class="content-logo">
+          <p class="content-heading">Nutrition</p>
+          <p class="content-passage">Our snacks are not only incredibly delicious but are also packed with nutritional value, giving you a wholesome experience.</p>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="content-div">
+          <img src="assets/icons/fresh.png" alt="Fresh food" class="content-logo">
+          <p class="content-heading">Freshness</p>
+          <p class="content-passage">We make sure all our snacks are always as fresh as possible by shipping directly from the source to you.</p>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="content-div">
+          <img src="assets/icons/handshake.png" alt="Variety" class="content-logo">
+          <p class="content-heading">Variety</p>
+          <p class="content-passage">Our collection of snacks are sure to offer something for everyone, guaranteed to fill you with happiness.</p>
+        </div>
+      </div>
+  </article>
 
 
 
@@ -80,8 +153,7 @@
 
 
 
-
-<!--
+  <!--
   <section id="hero">
     <div class="container">
       <h1>Unleash Your Gaming Potential with Bubble!</h1>
