Updated-Main-Page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="Tribute-Page/base.html">
             <div id="card" class="card">
                 <div class="content">
-                  <span>Calculator</span>
+                  <span>Tribute-Page</span>
                 </div>
               </div>
             </a>
