fixed responsive layout

--- a/Todo-app/base.html
+++ b/Todo-app/base.html
@@ -20,6 +20,8 @@
     <header>
       <h1>Todo List</h1>
     </header>
+    <div class="media-mobile">
+  <div>
     <form>
       <input type="text" class="todo-input" />
       <button class="todo-button" type="submit">
@@ -33,9 +35,11 @@
         </select>
       </div>
     </form>
+  </div>
     <div class="todo-container">
       <ul class="todo-list"></ul>
     </div>
+  </div>
 </div>
     <script src="script.js"></script>
   </body>
