--- a/index.html
+++ b/index.html
@@ -1,47 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://img.icons8.com/?size=512&id=6R735OAB4eCV&format=png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Teko:wght@500&display=swap" rel="stylesheet"> 
-    <title>OIBSIP-Project</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://img.icons8.com/?size=512&id=6R735OAB4eCV&format=png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <title>OIBSIP-ProjeTct</title>
 </head>
+
 <body>
 
-    <div class="card-section">
-    <div>
-    <a href="Calculator/base.html">
-    <div id="card" class="card">
-        <div class="content">
-          <span>Calculator</span>
-        </div>
-      </div>
-    </a>
-    </div>
-    <div>
-        <a href="Todo-app/base.html">
-        <div id="card" class="card">
-            <div class="content">
-              <span>Todo-app</span>
-            </div>
-          </div>
-        </a>
-        </div>
 
-        <div>
-            <a href="Tribute-Page/base.html">
-            <div id="card" class="card">
-                <div class="content">
-                  <span>Tribute-Page</span>
-                </div>
-              </div>
-            </a>
-        </div>
+  <div class="holder">
+    <div class="candle">
+      <div class="blinking-glow"></div>
+      <div class="thread"></div>
+      <div class="glow"></div>
+      <div class="flame"></div>
     </div>
+  </div>
+
+
+  <div class="card-div">
+    <div class="circle-1">
+
+      <a href="Calculator/base.html">
+        <div class="card">
+          <div class="card-info">
+            <p class="title">Calculator</p>
+          </div>
+        </div>
+      </a>
+
+    </div>
+
+    <div class="circle-2">
+
+      <a href="Todo-app/base.html">
+        <div class="card-2">
+          <div class="card-info">
+            <p class="title">Todo-app</p>
+          </div>
+        </div>
+      </a>
+
+    </div>
+
+    <div class="circle-3">
+
+      <a href="Tribute-Page/base.html">
+        <div class="card">
+          <div class="card-info">
+            <p class="title">Tribute-Page</p>
+          </div>
+        </div>
+      </a>
+
+    </div>
+
+  </div>
+
 </body>
+
 </html>
